// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnnotationTable should be able to export a CSV 1`] = `
"# URL: http://localhost/annotations?viewId=xxxx&ds=2019-02-12_15h55m06s
\\"group\\",\\"datasetName\\",\\"datasetId\\",\\"formula\\",\\"adduct\\",\\"chemMod\\",\\"ion\\",\\"mz\\",\\"msm\\",\\"fdr\\",\\"rhoSpatial\\",\\"rhoSpectral\\",\\"rhoChaos\\",\\"moleculeNames\\",\\"moleculeIds\\",\\"minIntensity\\",\\"maxIntensity\\",\\"totalIntensity\\",\\"isomers\\",\\"isobars\\",\\"offSample\\",\\"rawOffSampleProb\\",\\"isobarIons\\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"annotations.0.chemMod\\",\\"C19H18N2O7S2-H+\\",\\"1\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"10\\",\\"0\\",\\"7.333333333333333\\",\\"1\\",\\"2\\",\\"false\\",\\"0.03\\",\\"annotations.0.isobars.0.ion, annotations.0.isobars.1.ion\\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"annotations.1.chemMod\\",\\"C19H18N2O7S2-H+\\",\\"2\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"10.333333333333334\\",\\"0.3333333333333333\\",\\"7.666666666666667\\",\\"1\\",\\"2\\",\\"false\\",\\"0.03\\",\\"annotations.1.isobars.0.ion, annotations.1.isobars.1.ion\\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"annotations.0.chemMod\\",\\"C19H18N2O7S2-H+\\",\\"3\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"10\\",\\"0\\",\\"7.333333333333333\\",\\"1\\",\\"2\\",\\"false\\",\\"0.03\\",\\"annotations.0.isobars.0.ion, annotations.0.isobars.1.ion\\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"annotations.1.chemMod\\",\\"C19H18N2O7S2-H+\\",\\"4\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"10.333333333333334\\",\\"0.3333333333333333\\",\\"7.666666666666667\\",\\"1\\",\\"2\\",\\"false\\",\\"0.03\\",\\"annotations.1.isobars.0.ion, annotations.1.isobars.1.ion\\"
"
`;

exports[`AnnotationTable should match snapshot 1`] = `
<div class="el-row">
  <div class="el-table el-table--fit el-table--striped el-table--border el-table--scrollable-x el-table--enable-row-hover el-table--enable-row-transition el-table--mini" id="annot-table" element-loading-text="Loading results …" tabindex="1" mock-v-loading="false">
    <div class="hidden-columns">
      <div></div>
      <div></div>
      <div></div>
      <!---->
      <div></div>
      <!---->
      <!---->
      <!---->
      <!---->
      <div></div>
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <div></div>
      <!---->
    </div>
    <div class="el-table__header-wrapper">
      <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 550px;">
        <colgroup>
          <col name="el-table_1_column_1" width="95">
          <col name="el-table_1_column_2" width="140">
          <col name="el-table_1_column_3" width="120">
          <col name="el-table_1_column_4" width="65">
          <col name="el-table_1_column_5" width="70">
          <col name="el-table_1_column_6" width="60">
        </colgroup>
        <thead class="">
          <tr class="">
            <th colspan="1" rowspan="1" class="el-table_1_column_1     is-leaf is-sortable">
              <div class="cell">Lab<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_2     is-leaf is-sortable">
              <div class="cell">Dataset<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_3     is-leaf is-sortable">
              <div class="cell">Annotation<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_4     is-leaf is-sortable">
              <div class="cell">m/z<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_5 descending    is-leaf is-sortable">
              <div class="cell">MSM<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_6   fdr-cell  is-leaf is-sortable">
              <div class="cell">FDR<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div class="el-table__body-wrapper is-scrolling-left">
      <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 550px;">
        <colgroup>
          <col name="el-table_1_column_1" width="95">
          <col name="el-table_1_column_2" width="140">
          <col name="el-table_1_column_3" width="120">
          <col name="el-table_1_column_4" width="65">
          <col name="el-table_1_column_5" width="70">
          <col name="el-table_1_column_6" width="60">
        </colgroup>
        <tbody>
          <tr class="el-table__row fdr-10 coloc-80">
            <td rowspan="1" colspan="1" class="el-table_1_column_1  ">
              <div class="cell">
                <div class="cell-wrapper"><span class="cell-span"><span>Laboratory of European Molecular Biology</span></span> <svg data-icon="filter" class="cell-filter-button"></svg></div>
              </div>
            </td>
            <td rowspan="1" colspan="1" class="el-table_1_column_2  ">
              <div class="cell">
                <div class="cell-wrapper"><span class="cell-span">
            Untreated_3_434
          </span> <svg data-icon="filter" class="cell-filter-button"></svg></div>
              </div>
            </td>
            <td rowspan="1" colspan="1" class="el-table_1_column_3  ">
              <div class="cell">
                <div class="cell-wrapper">
                  <mock-el-popover trigger="hover" placement="right" class="cell-span">
                    <div slot-key="default">
                      <div class="leading-5 py-2 px-3 font-normal content text-sm text-left">
                        <!---->
                        <p class="title">
                          Candidate molecule
                        </p>
                        <ul class="p-0 list-none leading-7">
                          <li>
                            C.I. Food Red 6
                          </li>
                          <!---->
                        </ul>
                        <div>
                          <p class="title"><span>2 isomeric ions were annotated</span></p>
                          <p>
                            Check the <b>Molecules</b> panel for more candidates.
                          </p>
                        </div>
                        <div>
                          <p class="title"><span>2 isobaric ions were annotated</span></p>
                          <p class="max-w-measure-1">
                            Check the <b>Molecules</b> panel to see candidate molecules from the isobaric ions,
                            and the <b>Diagnostics</b> panel to compare the isotopic images and spectra.
                          </p>
                        </div>
                      </div>
                    </div>
                    <div slot-key="reference"><span>[C<sub class="leading-none">19</sub>H<sub class="leading-none">18</sub>N<sub class="leading-none">2</sub>O<sub class="leading-none">7</sub>S<sub class="leading-none">2</sub> - H]⁺</span>
                      <!---->
                      <!---->
                    </div>
                  </mock-el-popover> <svg data-icon="filter" class="cell-filter-button"></svg>
                </div>
              </div>
            </td>
            <td rowspan="1" colspan="1" class="el-table_1_column_4  ">
              <div class="cell">
                <div class="cell-wrapper"><span class="cell-span">
            449.0482
          </span> <svg data-icon="filter" class="cell-filter-button"></svg></div>
              </div>
            </td>
            <td rowspan="1" colspan="1" class="el-table_1_column_5  ">
              <div class="cell"><span>0.657</span></div>
            </td>
            <td rowspan="1" colspan="1" class="el-table_1_column_6  fdr-cell">
              <div class="cell"><span>10%</span></div>
            </td>
          </tr>
          <!---->
        </tbody>
      </table>
      <!---->
      <!---->
    </div>
    <!---->
    <!---->
    <!---->
    <!---->
    <div class="el-table__column-resize-proxy" style="display: none;"></div>
  </div>
  <div class="flex justify-between items-start mt-2">
    <div class="mt-1">
      <mock-el-pagination total="1" page-size="15" page-sizes="15,20,25,30" current-page="1" layout="prev,pager,next,sizes"></mock-el-pagination>
      <div id="annot-count" class="mt-2"><b>1</b> matching record
      </div>
      <div class="mt-2">
        <div class="fdr-legend-header">
          FDR levels:
        </div>
        <div class="fdr-legend fdr-5">
          5%
        </div>
        <div class="fdr-legend fdr-10">
          10%
        </div>
        <div class="fdr-legend fdr-20">
          20%
        </div>
        <div class="fdr-legend fdr-50">
          50%
        </div>
      </div>
    </div>
    <div class="flex w-full items-center justify-end flex-wrap">
      <mock-el-popover class="mt-1">
        <div slot-key="default">
          <div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Lab</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Dataset</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Annotation</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Adduct</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>m/z</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Off-sample probability %</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>spatial</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>spectral</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>chaos</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>MSM</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Database</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Molecules</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Isomers</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Isobars</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Max Intensity</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Total Intensity</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>FDR</span></div>
            <div class="cursor-pointer select-none">
              <!---->
            </div>
          </div>
        </div>
        <div slot-key="reference"><button type="button" class="el-button select-btn-wrapper relative el-button--default">
            <!---->
            <!----><span><div class="el-badge new-custom-badge sm-feature-badge">
            Columns
          <transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div> <i class="el-icon-arrow-down select-btn-icon"></i></span></button></div>
      </mock-el-popover>
      <mock-el-popover popper-class="export-pop" class="select-btn-wrapper ml-2 mt-1">
        <div slot-key="default">
          <p class="export-option">
            Annotations table
          </p>
          <p class="export-option">
            Pixel intensities
          </p>
        </div>
        <div slot-key="reference">
          <div><button type="button" class="el-button select-btn-wrapper relative el-button--default" width="146" height="42">
              <!---->
              <!----><span>
            Export to CSV
            <i class="el-icon-arrow-down select-btn-icon"></i></span></button></div>
        </div>
      </mock-el-popover>
      <div class="ml-2 mt-1"><button type="button" class="el-button full-screen-btn el-button--default">
          <!---->
          <!----><span><svg data-icon="exit_full_screen" class="full-screen-icon"></svg></span></button></div>
    </div>
  </div>
</div>
`;

exports[`AnnotationTable should match snapshot when loading snapshot 1`] = `
<div class="el-row">
  <div class="el-table el-table--fit el-table--striped el-table--border el-table--scrollable-x el-table--enable-row-hover el-table--enable-row-transition el-table--mini" id="annot-table" element-loading-text="Loading results …" tabindex="1" mock-v-loading="false">
    <div class="hidden-columns">
      <!---->
      <!---->
      <div></div>
      <!---->
      <div></div>
      <!---->
      <!---->
      <!---->
      <!---->
      <div></div>
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <div></div>
      <!---->
    </div>
    <div class="el-table__header-wrapper">
      <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 550px;">
        <colgroup>
          <col name="el-table_2_column_9" width="120">
          <col name="el-table_2_column_10" width="65">
          <col name="el-table_2_column_11" width="70">
          <col name="el-table_2_column_12" width="60">
        </colgroup>
        <thead class="">
          <tr class="">
            <th colspan="1" rowspan="1" class="el-table_2_column_9     is-leaf is-sortable">
              <div class="cell">Annotation<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_2_column_10     is-leaf is-sortable">
              <div class="cell">m/z<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_2_column_11 descending    is-leaf is-sortable">
              <div class="cell">MSM<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_2_column_12   fdr-cell  is-leaf is-sortable">
              <div class="cell">FDR<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div class="el-table__body-wrapper is-scrolling-left">
      <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 550px;">
        <colgroup>
          <col name="el-table_2_column_9" width="120">
          <col name="el-table_2_column_10" width="65">
          <col name="el-table_2_column_11" width="70">
          <col name="el-table_2_column_12" width="60">
        </colgroup>
        <tbody>
          <tr class="el-table__row fdr-10 coloc-80">
            <td rowspan="1" colspan="1" class="el-table_2_column_9  ">
              <div class="cell">
                <div class="cell-wrapper">
                  <mock-el-popover trigger="hover" placement="right" class="cell-span">
                    <div slot-key="default">
                      <div class="leading-5 py-2 px-3 font-normal content text-sm text-left">
                        <!---->
                        <p class="title">
                          Candidate molecule
                        </p>
                        <ul class="p-0 list-none leading-7">
                          <li>
                            C.I. Food Red 6
                          </li>
                          <!---->
                        </ul>
                        <div>
                          <p class="title"><span>2 isomeric ions were annotated</span></p>
                          <p>
                            Check the <b>Molecules</b> panel for more candidates.
                          </p>
                        </div>
                        <div>
                          <p class="title"><span>2 isobaric ions were annotated</span></p>
                          <p class="max-w-measure-1">
                            Check the <b>Molecules</b> panel to see candidate molecules from the isobaric ions,
                            and the <b>Diagnostics</b> panel to compare the isotopic images and spectra.
                          </p>
                        </div>
                      </div>
                    </div>
                    <div slot-key="reference"><span>[C<sub class="leading-none">19</sub>H<sub class="leading-none">18</sub>N<sub class="leading-none">2</sub>O<sub class="leading-none">7</sub>S<sub class="leading-none">2</sub> - H]⁺</span>
                      <!---->
                      <!---->
                    </div>
                  </mock-el-popover> <svg data-icon="filter" class="cell-filter-button"></svg>
                </div>
              </div>
            </td>
            <td rowspan="1" colspan="1" class="el-table_2_column_10  ">
              <div class="cell">
                <div class="cell-wrapper"><span class="cell-span">
            449.0482
          </span> <svg data-icon="filter" class="cell-filter-button"></svg></div>
              </div>
            </td>
            <td rowspan="1" colspan="1" class="el-table_2_column_11  ">
              <div class="cell"><span>0.657</span></div>
            </td>
            <td rowspan="1" colspan="1" class="el-table_2_column_12  fdr-cell">
              <div class="cell"><span>10%</span></div>
            </td>
          </tr>
          <!---->
        </tbody>
      </table>
      <!---->
      <!---->
    </div>
    <!---->
    <!---->
    <!---->
    <!---->
    <div class="el-table__column-resize-proxy" style="display: none;"></div>
  </div>
  <div class="flex justify-between items-start mt-2">
    <div class="mt-1">
      <mock-el-pagination total="1" page-size="15" page-sizes="15,20,25,30" current-page="1" layout="pager"></mock-el-pagination>
      <div id="annot-count" class="mt-2"><b>1</b> matching record
      </div>
      <div class="mt-2">
        <div class="fdr-legend-header">
          FDR levels:
        </div>
        <div class="fdr-legend fdr-5">
          5%
        </div>
        <div class="fdr-legend fdr-10">
          10%
        </div>
        <div class="fdr-legend fdr-20">
          20%
        </div>
        <div class="fdr-legend fdr-50">
          50%
        </div>
      </div>
    </div>
    <div class="flex w-full items-center justify-end flex-wrap">
      <mock-el-popover class="mt-1">
        <div slot-key="default">
          <div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Lab</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Dataset</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Annotation</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Adduct</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>m/z</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Off-sample probability %</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>spatial</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>spectral</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>chaos</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>MSM</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Database</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Molecules</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Isomers</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Isobars</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Max Intensity</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Total Intensity</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>FDR</span></div>
            <div class="cursor-pointer select-none">
              <!---->
            </div>
          </div>
        </div>
        <div slot-key="reference"><button type="button" class="el-button select-btn-wrapper relative el-button--default">
            <!---->
            <!----><span><div class="el-badge new-custom-badge sm-feature-badge">
            Columns
          <transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div> <i class="el-icon-arrow-down select-btn-icon"></i></span></button></div>
      </mock-el-popover>
      <mock-el-popover popper-class="export-pop" class="select-btn-wrapper ml-2 mt-1">
        <div slot-key="default">
          <p class="export-option">
            Annotations table
          </p>
          <p class="export-option">
            Pixel intensities
          </p>
        </div>
        <div slot-key="reference">
          <div><button type="button" class="el-button select-btn-wrapper relative el-button--default" width="146" height="42">
              <!---->
              <!----><span>
            Export to CSV
            <i class="el-icon-arrow-down select-btn-icon"></i></span></button></div>
        </div>
      </mock-el-popover>
      <div class="ml-2 mt-1"><button type="button" class="el-button full-screen-btn el-button--default">
          <!---->
          <!----><span><svg data-icon="exit_full_screen" class="full-screen-icon"></svg></span></button></div>
    </div>
  </div>
</div>
`;
